--- a/home-starter-page.html
+++ b/home-starter-page.html
@@ -22,8 +22,18 @@
                 <li class="active"><a href="home-starter-page.html">Home</a></li>
                 <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#"> Congress 113 <span class="caret"></span></a>
                     <ul class="dropdown-menu">
-                        <li><a href="senate-starter-page.html">Senate</a></li>
                         <li><a href="house-starter-page.html">House</a></li>
+                        <li><a href="senate-starter-page.html">Senate</a></li>
+                    </ul>
+                <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#"> Attendance <span class="caret"></span></a>
+                    <ul class="dropdown-menu">
+                        <li><a href="house-attendance-starter-page.html">House</a></li>
+                        <li><a href="senate-attendance-starter-page.html">Senate</a></li>
+                    </ul>
+                <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#"> Party Loyalte <span class="caret"></span></a>
+                    <ul class="dropdown-menu">
+                        <li><a href="house-party-loyalty-starter-page.html">House</a></li>
+                        <li><a href="senate-party-loyalty-starter-page.html">Senate</a></li>
                     </ul>
                 </li>
             </ul>
