--- a/house-starter-page.html
+++ b/house-starter-page.html
@@ -16,11 +16,21 @@
                 <a class="navbar-brand" href="https://www.whitehouse.gov/the_press_office/TransparencyandOpenGovernment">TGIF</a>
             </div>
             <ul class="nav navbar-nav">
-                <li class="active"><a href="home-starter-page.html">Home</a></li>
-                <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#"> Congress 113 <span class="caret"></span></a>
+                <li class="dropdown"><a href="home-starter-page.html">Home</a></li>
+                <li class="active"><a class="dropdown-toggle" data-toggle="dropdown" href="#"> Congress 113 <span class="caret"></span></a>
                     <ul class="dropdown-menu">
-                        <li><a href="senate-starter-page.html">Senate</a></li>
                         <li><a href="house-starter-page.html">House</a></li>
+                        <li><a href="senate-starter-page.html">Senate</a></li>
+                    </ul>
+                <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#"> Attendance <span class="caret"></span></a>
+                    <ul class="dropdown-menu">
+                        <li><a href="house-attendance-starter-page.html">House</a></li>
+                        <li><a href="senate-attendance-starter-page.html">Senate</a></li>
+                    </ul>
+                <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#"> Party Loyalte <span class="caret"></span></a>
+                    <ul class="dropdown-menu">
+                        <li><a href="house-party-loyalty-starter-page.html">House</a></li>
+                        <li><a href="senate-party-loyalty-starter-page.html">Senate</a></li>
                     </ul>
                 </li>
             </ul>
@@ -33,7 +43,7 @@
         <p>The major power of the House is to pass federal legislation that affects the entire country, although its bills must also be passed by the Senate and further agreed to by the U.S. President before becoming law (unless both the House and Senate re-pass the legislation with a two-thirds majority in each chamber). The House has some exclusive powers: the power to initiate revenue bills, to impeach officials (impeached officials are subsequently tried in the Senate), and to elect the U.S. President in case there is no majority in the Electoral College.</p>
         <p>Each U.S. state is represented in the House in proportion to its population as measured in the census, but every state is entitled to at least one representative. </p>
 
-            <div>
+        <div>
             <input type="checkbox" name="party" value="D" id="Democrat" onClick="showDemocrats()" checked> Democrat
             <input type="checkbox" name="party" value="R" id="Republican" onClick="showDemocrats()" checked> Republican
             <input type="checkbox" name="party" value="I" id="Independent" onClick="showDemocrats()" checked> Independent
