--- a/senate-starter-page.html
+++ b/senate-starter-page.html
@@ -16,11 +16,21 @@
                 <a class="navbar-brand" href="https://www.whitehouse.gov/the_press_office/TransparencyandOpenGovernment">TGIF</a>
             </div>
             <ul class="nav navbar-nav">
-                <li class="active"><a href="home-starter-page.html">Home</a></li>
-                <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#"> Congress 113 <span class="caret"></span></a>
+                <li class="dropdown"><a href="home-starter-page.html">Home</a></li>
+                <li class="active"><a class="dropdown-toggle" data-toggle="dropdown" href="#"> Congress 113 <span class="caret"></span></a>
                     <ul class="dropdown-menu">
-                        <li><a href="senate-starter-page.html">Senate</a></li>
                         <li><a href="house-starter-page.html">House</a></li>
+                        <li><a href="senate-starter-page.html">Senate</a></li>
+                    </ul>
+                <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#"> Attendance <span class="caret"></span></a>
+                    <ul class="dropdown-menu">
+                        <li><a href="house-attendance-starter-page.html">House</a></li>
+                        <li><a href="senate-attendance-starter-page.html">Senate</a></li>
+                    </ul>
+                <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#"> Party Loyalte <span class="caret"></span></a>
+                    <ul class="dropdown-menu">
+                        <li><a href="house-party-loyalty-starter-page.html">House</a></li>
+                        <li><a href="senate-party-loyalty-starter-page.html">Senate</a></li>
                     </ul>
                 </li>
             </ul>
