--- a/house-attendance-starter-page.html
+++ b/house-attendance-starter-page.html
@@ -51,7 +51,8 @@
         <p>The Senate uses roll-call votes; a clerk calls out the names of all the senators, each senator stating "aye" or "no" when his or her name is announced. The House reserves roll-call votes for the most formal matters, as a roll-call of all 435 representatives takes quite some time; normally, members vote by electronic device. In the case of a tie, the motion in question fails. In the Senate, the Vice President may (if present) cast the tiebreaking vote.</p>
 
         <h2>House at a glance</h2>
-        <table>
+        <div class="container">
+        <table id="tabla2" class="table table-striped">
             <thead>
                 <tr>
                     <th>Party</th>
@@ -59,25 +60,8 @@
                     <th>% Voted with Prty</th>
                 </tr>
             </thead>
-            <tbody>
-                <tr>
-                    <td>Republican</td>
-                    <td>--</td>
-                    <td>--</td>
-                </tr>
-                <tr>
-                    <td>Democrat</td>
-                    <td>--</td>
-                    <td>--</td>
-                </tr>
-                <tr>
-                    <td>Independent</td>
-                    <td>--</td>
-                    <td>--</td>
-                </tr>
-            </tbody>
         </table>
-
+        </div>
         <h2>Least Engaged (Bottom 10% Attendance)</h2>
         <table>
             <thead>
