--- a/senate-party-loyalty-starter-page.html
+++ b/senate-party-loyalty-starter-page.html
@@ -49,7 +49,8 @@
         <p>Those who consider themselves to be strong partisans, strong Democrats and strong Republicans respectively, tend to be the most faithful in voting for their party's nominee for office and legislation that backs their party's agenda. </p>
 
         <h2>Senate at a glance</h2>
-        <table>
+        <div class="container">
+        <table id="tabla2" class="table table-striped">
             <thead>
                 <tr>
                     <th>Party</th>
@@ -57,25 +58,8 @@
                     <th>% Voted with Prty</th>
                 </tr>
             </thead>
-            <tbody>
-                <tr>
-                    <td>Republican</td>
-                    <td>--</td>
-                    <td>--</td>
-                </tr>
-                <tr>
-                    <td>Democrat</td>
-                    <td>--</td>
-                    <td>--</td>
-                </tr>
-                <tr>
-                    <td>Independent</td>
-                    <td>--</td>
-                    <td>--</td>
-                </tr>
-            </tbody>
         </table>
-
+        </div>
         <h2>Least Loyal (Bottom 10% of Party)</h2>
         <table>
             <thead>
