--- a/senate-attendance-starter-page.html
+++ b/senate-attendance-starter-page.html
@@ -52,106 +52,61 @@
 
         <h2>Senate at a glance</h2>
         <div class="container">
-        <table id="tabla2" class="table table-striped">
-            <thead>
-                <tr>
-                    <th>Party</th>
-                    <th>Number of Reps</th>
-                    <th>% Voted with Prty</th>
-                </tr>
-            </thead>
-        </table>
+            <table id="tabla2" class="table table-striped">
+                <thead>
+                    <tr>
+                        <th>Party</th>
+                        <th>Number of Reps</th>
+                        <th>% Voted with Prty</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>Democrats</td>
+                        <td id="numDem"></td>
+                        <td id="compDem"></td>
+                        <td></td>
+                    </tr>
+                    <tr>
+                        <td>Republicans</td>
+                        <td id="numRep"></td>
+                        <td id="compRep"></td>
+                        <td></td>
+                    </tr>
+                    <tr>
+                        <td>Independets</td>
+                        <td id="numInd"></td>
+                        <td id="compRep"></td>
+                        <td></td>
+                    </tr>
+                </tbody>
+            </table>
         </div>
         <h2>Least Engaged (Bottom 10% Attendance)</h2>
-        <table>
-            <thead>
-                <tr>
-                    <th>Name</th>
-                    <th>Number of Missed Votes</th>
-                    <th>% Missed</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <td>--</td>
-                    <td>--</td>
-                    <td>--</td>
-                </tr>
-                <tr>
-                    <td>--</td>
-                    <td>--</td>
-                    <td>--</td>
-                </tr>
-                <tr>
-                    <td>--</td>
-                    <td>--</td>
-                    <td>--</td>
-                </tr>
-                <tr>
-                    <td>--</td>
-                    <td>--</td>
-                    <td>--</td>
-                </tr>
-                <tr>
-                    <td>--</td>
-                    <td>--</td>
-                    <td>--</td>
-                </tr>
-                <tr>
-                    <td>--</td>
-                    <td>--</td>
-                    <td>--</td>
-                </tr>
-            </tbody>
-        </table>
+        <div id="sa" class="container">
+            <table id="tabla5" class="table table-striped">
+                <thead>
+                    <tr>
+                        <th>Name</th>
+                        <th>Number of Missed Votes</th>
+                        <th>% Missed</th>
+                    </tr>
+                </thead>
+            </table>
+        </div>
 
         <h2>Most Engaged (Top 10% Attendance)</h2>
-        <table>
-            <thead>
-                <tr>
-                    <th>Name</th>
-                    <th>Number of Missed Votes</th>
-                    <th>% Missed</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <td>--</td>
-                    <td>--</td>
-                    <td>--</td>
-                </tr>
-                <tr>
-                    <td>--</td>
-                    <td>--</td>
-                    <td>--</td>
-                </tr>
-                <tr>
-                    <td>--</td>
-                    <td>--</td>
-                    <td>--</td>
-                </tr>
-                <tr>
-                    <td>--</td>
-                    <td>--</td>
-                    <td>--</td>
-                </tr>
-                <tr>
-                    <td>--</td>
-                    <td>--</td>
-                    <td>--</td>
-                </tr>
-                <tr>
-                    <td>--</td>
-                    <td>--</td>
-                    <td>--</td>
-                </tr>
-                <tr>
-                    <td>--</td>
-                    <td>--</td>
-                    <td>--</td>
-                </tr>
-            </tbody>
-        </table>
+        <div id="sa2" class="container">
+            <table id="tabla6" class="table table-striped">
+                <thead>
+                    <tr>
+                        <th>Name</th>
+                        <th>Number of Missed Votes</th>
+                        <th>% Missed</th>
+                    </tr>
+                </thead>
+            </table>
+        </div>
 
     </div>
     <script src="pro-congress-113-senate.js"></script>
