--- a/senate-party-loyalty-starter-page.html
+++ b/senate-party-loyalty-starter-page.html
@@ -49,7 +49,7 @@
         <p>Those who consider themselves to be strong partisans, strong Democrats and strong Republicans respectively, tend to be the most faithful in voting for their party's nominee for office and legislation that backs their party's agenda. </p>
 
         <h2>Senate at a glance</h2>
-        <div class="container">
+        <div id="senate2" class="container">
             <table id="tabla2" class="table table-striped">
                 <thead>
                     <tr>
@@ -105,9 +105,7 @@
                 </thead>
             </table>
         </div>
-
     </div>
-    <script src="pro-congress-113-senate.js"></script>
     <script src="statistics.js"></script>>
 </body>
 
