--- a/house-attendance-starter-page.html
+++ b/house-attendance-starter-page.html
@@ -51,7 +51,7 @@
         <p>The Senate uses roll-call votes; a clerk calls out the names of all the senators, each senator stating "aye" or "no" when his or her name is announced. The House reserves roll-call votes for the most formal matters, as a roll-call of all 435 representatives takes quite some time; normally, members vote by electronic device. In the case of a tie, the motion in question fails. In the Senate, the Vice President may (if present) cast the tiebreaking vote.</p>
 
         <h2>House at a glance</h2>
-        <div class="container">
+        <div id="house2" class="container">
             <table id="tabla2" class="table table-striped">
                 <thead>
                     <tr>
@@ -107,9 +107,7 @@
                 </thead>
             </table>
         </div>
-
     </div>
-    <script src="pro-congress-113-house.js"></script>
     <script src="statistics.js"></script>
 </body>
 
