--- a/house-starter-page.html
+++ b/house-starter-page.html
@@ -10,7 +10,7 @@
 
 <body>
     <img class="logo" src="descarga.jpg" alt="kids team logo">
-    <nav class="navbar navbar-inverse">
+    <nav class="navbar navbar-inverse" id="house">
         <div class="container-fluid">
             <div class="navbar-header">
                 <a class="navbar-brand" href="https://www.whitehouse.gov/the_press_office/TransparencyandOpenGovernment">TGIF</a>
@@ -71,7 +71,7 @@
             </table>
         </div>
     </div>
-    <script src="pro-congress-113-house.js"></script>
+
     <script src="mainsenate.js"></script>
 </body>
 
