--- a/senate-party-loyalty-starter-pageVUE.html
+++ b/senate-party-loyalty-starter-pageVUE.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+
 </head>
 
 <body>
@@ -22,15 +23,15 @@
                         <li><a href="house-starter-page.html">House</a></li>
                         <li><a href="senate-starter-page.html">Senate</a></li>
                     </ul>
-                <li class="active"><a class="dropdown-toggle" data-toggle="dropdown" href="#"> Attendance <span class="caret"></span></a>
+                <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#"> Attendance <span class="caret"></span></a>
                     <ul class="dropdown-menu">
-                        <li><a href="house-attendance-starter-page.html">House</a></li>
-                        <li><a href="senate-attendance-starter-page.html">Senate</a></li>
+                        <li><a href="house-attendance-starter-pageVUE.html">House</a></li>
+                        <li><a href="senate-attendance-starter-pageVUE.html">Senate</a></li>
                     </ul>
-                <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#"> Party Loyalte <span class="caret"></span></a>
+                <li class="active"><a class="dropdown-toggle" data-toggle="dropdown" href="#"> Party Loyalte <span class="caret"></span></a>
                     <ul class="dropdown-menu">
-                        <li><a href="house-party-loyalty-starter-page.html">House</a></li>
-                        <li><a href="senate-party-loyalty-starter-page.html">Senate</a></li>
+                        <li><a href="house-party-loyalty-starter-pageVUE.html">House</a></li>
+                        <li><a href="senate-party-loyalty-starter-pageVUE.html">Senate</a></li>
                     </ul>
                 </li>
             </ul>
@@ -43,11 +44,9 @@
         </div>
     </header>
     <!--Table container-->
-    <div>
-        <h2>Attendance</h2>
-        <p>The Constitution specifies that a majority of members constitutes a quorum to do business in each house. Representatives and senators rarely force the presence of a quorum by demanding quorum calls; thus, in most cases, debates continue even if a majority is not present.</p>
-
-        <p>The Senate uses roll-call votes; a clerk calls out the names of all the senators, each senator stating "aye" or "no" when his or her name is announced. The House reserves roll-call votes for the most formal matters, as a roll-call of all 435 representatives takes quite some time; normally, members vote by electronic device. In the case of a tie, the motion in question fails. In the Senate, the Vice President may (if present) cast the tiebreaking vote.</p>
+    <div id="app">
+        <h2>Party Loyalty</h2>
+        <p>Those who consider themselves to be strong partisans, strong Democrats and strong Republicans respectively, tend to be the most faithful in voting for their party's nominee for office and legislation that backs their party's agenda. </p>
 
         <h2>Senate at a glance</h2>
         <div id="senate2" class="container">
@@ -62,52 +61,61 @@
                 <tbody>
                     <tr>
                         <td>Democrats</td>
-                        <td id="numDem"></td>
-                        <td id="compDem"></td>
-                        <td></td>
+                        <td>{{statistics.numDem}}</td>
+                        <td>{{statistics.compDem}}</td>
+
                     </tr>
                     <tr>
                         <td>Republicans</td>
-                        <td id="numRep"></td>
-                        <td id="compRep"></td>
-                        <td></td>
+                        <td>{{statistics.numRep}}</td>
+                        <td>{{statistics.compRep}}</td>
+
                     </tr>
                     <tr>
                         <td>Independets</td>
-                        <td id="numInd"></td>
-                        <td id="compRep"></td>
-                        <td></td>
+                        <td>{{statistics.numInd}}</td>
                     </tr>
                 </tbody>
             </table>
         </div>
-        <h2>Least Engaged (Bottom 10% Attendance)</h2>
-        <div id="sa" class="container">
-            <table id="tabla5" class="table table-striped">
+        <h2>Least Loyal (Bottom 10% of Party)</h2>
+        <div id="sl" class="container">
+            <table id="tabla3" class="table table-striped">
                 <thead>
                     <tr>
                         <th>Name</th>
-                        <th>Number of Missed Votes</th>
-                        <th>% Missed</th>
+                        <th>Number Party Votes</th>
+                        <th>% Party Votes</th>
+                    </tr>
+                    <tr v-for="item in statistics.memfnVote">
+                        <td>{{item.first_name}} {{item.last_name}}</td>
+                        <td>{{item.total_votes}}</td>
+                        <td>{{item.votes_with_party_pct}}</td>
                     </tr>
                 </thead>
             </table>
         </div>
 
-        <h2>Most Engaged (Top 10% Attendance)</h2>
-        <div id="sa2" class="container">
-            <table id="tabla6" class="table table-striped">
+        <h2>Most Loyal (Top 10% of Party)</h2>
+        <div id="sl2" class="container">
+            <table id="tabla4" class="table table-striped">
                 <thead>
                     <tr>
-                        <th>Name</th>
-                        <th>Number of Missed Votes</th>
-                        <th>% Missed</th>
+                        <td>Name</td>
+                        <td>Number Party Votes</td>
+                        <td>% Party Votes</td>
+                    </tr>
+                    <tr v-for="item in statistics.memfVote">
+                        <td>{{item.first_name}} {{item.last_name}}</td>
+                        <td>{{item.total_votes}}</td>
+                        <td>{{item.votes_with_party_pct}}</td>
                     </tr>
                 </thead>
             </table>
         </div>
     </div>
-    <script src="statistics.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/vue"></script>
+    <script src="statisticsVUE.js"></script>>
 </body>
 
 </html>
