--- a/house-party-loyalty-starter-pageVUE.html
+++ b/house-party-loyalty-starter-pageVUE.html
@@ -11,11 +11,11 @@
 
 <body>
     <div id="page">
-        <img class="logo" src="usa.gif" alt="kids playing">
+        <img class="logo" src="usa2.png" alt="kids playing">
         <div class="correo">
-    <img src="Info_Light.png">
-    <a href="mailto:info@tgif.net">info@tgif.net</a>
-    </div>
+            <img src="Info_Light.png">
+            <a href="mailto:info@tgif.net">info@tgif.net</a>
+        </div>
         <nav class="navbar navbar-inverse">
             <div class="container-fluid">
                 <div class="navbar-header">
@@ -50,76 +50,81 @@
         </header>
         <!--Table container-->
         <div id="app">
-            <h2>Party Loyalty</h2>
-            <p>Those who consider themselves to be strong partisans, strong Democrats and strong Republicans respectively, tend to be the most faithful in voting for their party's nominee for office and legislation that backs their party's agenda. </p>
+            <div class="grid">
+                <div class="grid1">
+                    <h2>Party Loyalty</h2>
+                    <p>Those who consider themselves to be strong partisans, strong Democrats and strong Republicans respectively, tend to be the most faithful in voting for their party's nominee for office and legislation that backs their party's agenda. </p>
+                </div>
+                <div class="grid2">
+                    <h2>House at a glance</h2>
+                    <div id="house2">
+                        <table id="tabla2" class="table table-striped">
+                            <thead>
+                                <tr>
+                                    <th>Party</th>
+                                    <th>Number of Reps</th>
+                                    <th>% Voted with Prty</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr>
+                                    <td>Democrats</td>
+                                    <td>{{statistics.numDem}}</td>
+                                    <td>{{statistics.compDem}}</td>
 
-            <h2>House at a glance</h2>
-            <div id="house2" class="container">
-                <table id="tabla2" class="table table-striped">
-                    <thead>
-                        <tr>
-                            <th>Party</th>
-                            <th>Number of Reps</th>
-                            <th>% Voted with Prty</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr>
-                            <td>Democrats</td>
-                            <td>{{statistics.numDem}}</td>
-                            <td>{{statistics.compDem}}</td>
+                                </tr>
+                                <tr>
+                                    <td>Republicans</td>
+                                    <td>{{statistics.numRep}}</td>
+                                    <td>{{statistics.compRep}}</td>
 
-                        </tr>
-                        <tr>
-                            <td>Republicans</td>
-                            <td>{{statistics.numRep}}</td>
-                            <td>{{statistics.compRep}}</td>
-
-                        </tr>
-                        <tr>
-                            <td>Independets</td>
-                            <td>{{statistics.numInd}}</td>
-                            <td>0</td>
-                        </tr>
-                    </tbody>
-                </table>
+                                </tr>
+                                <tr>
+                                    <td>Independets</td>
+                                    <td>{{statistics.numInd}}</td>
+                                    <td>0</td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
             </div>
-
-            <h2>Least Loyal (Bottom 10% of Party)</h2>
-            <div id="sl" class="container">
-                <table id="tabla3" class="table table-striped">
-                    <thead>
-                        <tr>
-                            <td>Name</td>
-                            <td>Number Party Votes</td>
-                            <td>% Party Votes</td>
-                        </tr>
-                        <tr v-for="item in statistics.memfnVote">
-                            <td>{{item.first_name}} {{item.last_name}}</td>
-                            <td>{{item.total_votes}}</td>
-                            <td>{{item.votes_with_party_pct}}</td>
-                        </tr>
-                    </thead>
-                </table>
-            </div>
-
-            <h2>Most Loyal (Top 10% of Party)</h2>
-            <div id="sl2" class="container">
-                <table id="tabla4" class="table table-striped">
-                    <thead>
-                        <tr>
-                            <td>Name</td>
-                            <td>Number Party Votes</td>
-                            <td>% Party Votes</td>
-                        </tr>
-                        <tr v-for="item in statistics.memfVote">
-                            <td>{{item.first_name}} {{item.last_name}}</td>
-                            <td>{{item.total_votes}}</td>
-                            <td>{{item.votes_with_party_pct}}</td>
-                        </tr>
-                    </thead>
-                </table>
-                <div class="loading-bar"></div>
+            <div class="grid">
+                <div class="grid1">
+                    <h2>Least Loyal (Bottom 10% of Party)</h2>
+                    <table id="tabla3" class="table table-striped">
+                        <thead>
+                            <tr>
+                                <td>Name</td>
+                                <td>Number Party Votes</td>
+                                <td>% Party Votes</td>
+                            </tr>
+                            <tr v-for="item in statistics.memfnVote">
+                                <td>{{item.first_name}} {{item.last_name}}</td>
+                                <td>{{item.total_votes}}</td>
+                                <td>{{item.votes_with_party_pct}}</td>
+                            </tr>
+                        </thead>
+                    </table>
+                </div>
+                <div class="grid2">
+                    <h2>Most Loyal (Top 10% of Party)</h2>
+                    <table id="tabla4" class="table table-striped">
+                        <thead>
+                            <tr>
+                                <td>Name</td>
+                                <td>Number Party Votes</td>
+                                <td>% Party Votes</td>
+                            </tr>
+                            <tr v-for="item in statistics.memfVote">
+                                <td>{{item.first_name}} {{item.last_name}}</td>
+                                <td>{{item.total_votes}}</td>
+                                <td>{{item.votes_with_party_pct}}</td>
+                            </tr>
+                        </thead>
+                    </table>
+                    <div class="loading-bar"></div>
+                </div>
             </div>
         </div>
         <div class="final">
