--- a/house-starter-pageVUE.html
+++ b/house-starter-pageVUE.html
@@ -11,11 +11,11 @@
 
 <body>
     <div id="page">
-        <img class="logo" src="usa.gif" alt="kids playing">
+        <img class="logo" src="usa2.png" alt="kids playing">
         <div class="correo">
-    <img src="Info_Light.png">
-    <a href="mailto:info@tgif.net">info@tgif.net</a>
-    </div>
+            <img src="Info_Light.png">
+            <a href="mailto:info@tgif.net">info@tgif.net</a>
+        </div>
         <nav class="navbar navbar-inverse" id="house">
             <div class="container-fluid">
                 <div class="navbar-header">
