--- a/senate-attendance-starter-pageVUE.html
+++ b/senate-attendance-starter-pageVUE.html
@@ -14,7 +14,7 @@
         <img class="logo" src="usa2.png" alt="kids playing">
         <div class="correo">
             <img src="Info_Light.png">
-            <a href="mailto:info@tgif.net">info@tgif.net</a>
+            <a href="mailto:info@tgif.net" style="color:blue;" class="linki"> info@tgif.net</a>
         </div>
         <nav class="navbar navbar-inverse">
             <div class="container-fluid">
@@ -85,7 +85,11 @@
                                     <td>Independets</td>
                                     <td>{{statistics.numInd}}</td>
                                     <td>0</td>
-
+                                </tr>
+                                <tr>
+                                    <td>Total</td>
+                                    <td>{{parTotal}}</td>
+                                    <td>{{fin}}</td>
                                 </tr>
                             </tbody>
                         </table>
