--- a/house-starter-pageVUE.html
+++ b/house-starter-pageVUE.html
@@ -14,7 +14,7 @@
         <img class="logo" src="usa2.png" alt="kids playing">
         <div class="correo">
             <img src="Info_Light.png">
-            <a href="mailto:info@tgif.net">info@tgif.net</a>
+            <a href="mailto:info@tgif.net" style="color:blue;" class="linki"> info@tgif.net</a>
         </div>
         <nav class="navbar navbar-inverse" id="house">
             <div class="container-fluid">
@@ -51,15 +51,17 @@
                 <p>Each U.S. state is represented in the House in proportion to its population as measured in the census, but every state is entitled to at least one representative. </p>
 
                 <div>
-                    <input type="checkbox" name="party" value="D" id="Democrat" @click="filterCongress" checked> Democrat
-                    <input type="checkbox" name="party" value="R" id="Republican" @click="filterCongress" checked> Republican
-                    <input type="checkbox" name="party" value="I" id="Independent" @click="filterCongress" checked> Independent
-                    <select id="menu" @change="filterCongress">
-                        <option id="all">ALL
-                        </option>
-                        <option v-for="item in uniqs">{{item}}
-                        </option>
-                    </select>
+                    <h4>Filter By Party
+                        <input type="checkbox" name="party" value="D" id="Democrat" @click="filterCongress" checked> Democrat
+                        <input type="checkbox" name="party" value="R" id="Republican" @click="filterCongress" checked> Republican
+                        <input type="checkbox" name="party" value="I" id="Independent" @click="filterCongress" checked> Independent
+                        <select id="menu" @change="filterCongress">
+                            <option id="all">ALL
+                            </option>
+                            <option v-for="item in uniqs">{{item}}
+                            </option>
+                        </select>
+                    </h4>
                 </div>
                 <div class="container">
                     <table id="tabla1" class="table table-striped">
