--- a/senate-starter-pageVUE.html
+++ b/senate-starter-pageVUE.html
@@ -14,7 +14,7 @@
         <img class="logo" src="usa2.png" alt="kids playing">
         <div class="correo">
             <img src="Info_Light.png">
-            <a href="mailto:info@tgif.net">info@tgif.net</a>
+            <a href="mailto:info@tgif.net" style="color:blue;" class="linki"> info@tgif.net</a>
         </div>
         <nav class="navbar navbar-inverse" id="senate">
             <div class="container-fluid">
@@ -56,15 +56,17 @@
                 <p>First convened in 1789, the composition and powers of the Senate are established in Article One of the U.S. Constitution. Each state is represented by two senators, regardless of population, who serve staggered six-year terms. The Senate has several exclusive powers not granted to the House, including consenting to treaties as a precondition to their ratification and consenting to or confirming appointments of Cabinet secretaries, federal judges, other federal executive officials, military officers, regulatory officials, ambassadors, and other federal uniformed officers, as well as trial of federal officials impeached by the House.</p>
 
                 <div>
-                    <input type="checkbox" name="party" value="D" id="Democrat" @click="filterCongress" checked> Democrat
-                    <input type="checkbox" name="party" value="R" id="Republican" @click="filterCongress" checked> Republican
-                    <input type="checkbox" name="party" value="I" id="Independent" @click="filterCongress" checked> Independent
-                    <select id="menu" @change="filterCongress">
-                        <option id="all">ALL
-                        </option>
-                        <option v-for="item in uniqs">{{item}}
-                        </option>
-                    </select>
+                    <h4>Filter By Party
+                        <input type="checkbox" name="party" value="D" id="Democrat" @click="filterCongress" checked> Democrat
+                        <input type="checkbox" name="party" value="R" id="Republican" @click="filterCongress" checked> Republican
+                        <input type="checkbox" name="party" value="I" id="Independent" @click="filterCongress" checked> Independent
+                        <select id="menu" @change="filterCongress">
+                            <option id="all">ALL
+                            </option>
+                            <option v-for="item in uniqs">{{item}}
+                            </option>
+                        </select>
+                    </h4>
                 </div>
                 <div class="container">
                     <table id="tabla1" class="table table-striped">
