--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <nav class="navbar navbar-inverse">
             <div class="container-fluid">
                 <div class="navbar-header">
-                    <a class="navbar-brand" href="https://www.whitehouse.gov/the_press_office/TransparencyandOpenGovernment">TGIF</a>
+                    <a class="navbar-brand" href="https://www.congress.gov">TGIF</a>
                 </div>
                 <ul class="nav navbar-nav">
                     <li class="active"><a href="home-starter-page.html">Home</a></li>
@@ -62,7 +62,7 @@
 
 
                 <div class="container">
-                    <button type="button" class="btn btn-lg btn-info collapsed" data-toggle="collapse" data-target="#demo">Read More</button>
+                    <button type="button" id="button" class="btn btn-lg btn-info collapsed" data-toggle="collapse" data-target="#demo">Read More</button>
                     <div id="demo" class="collapse">
                         <h3>Background History of Government Transparency</h3>
                         <p>In the West, the idea that government should be open to public scrutiny and susceptible to public opinion dates back at least to the time of the Enlightenment, when many philosophes made an attack on absolutist doctrine of state secrecy, a core part of their intellectual project. The passage of formal legislative instruments to this end can also be traced to this time with Sweden, for example, (which then included Finland as a Swedish-governed territory) enacting free press legislation as part of its constitution (Freedom of the Press Act, 1766). This approach, and that of the philosophes more broadly, is strongly related to recent historiography on the eighteenth-century public sphere.
