--- a/house-starter-pageVUE.html
+++ b/house-starter-pageVUE.html
@@ -19,10 +19,10 @@
         <nav class="navbar navbar-inverse" id="house">
             <div class="container-fluid">
                 <div class="navbar-header">
-                    <a class="navbar-brand" href="https://www.whitehouse.gov/the_press_office/TransparencyandOpenGovernment">TGIF</a>
+                    <a class="navbar-brand" href="https://www.congress.gov">TGIF</a>
                 </div>
                 <ul class="nav navbar-nav">
-                    <li class="dropdown"><a href="home-starter-page.html">Home</a></li>
+                    <li class="dropdown"><a href="index.html">Home</a></li>
                     <li class="active"><a class="dropdown-toggle" data-toggle="dropdown" href="#"> Congress 113 <span class="caret"></span></a>
                         <ul class="dropdown-menu">
                             <li><a href="house-starter-pageVUE.html">House</a></li>
