--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                     <a class="navbar-brand" href="https://www.congress.gov">TGIF</a>
                 </div>
                 <ul class="nav navbar-nav">
-                    <li class="active"><a href="home-starter-page.html">Home</a></li>
+                    <li class="active"><a href="index.html">Home</a></li>
                     <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#"> Congress 113 <span class="caret"></span></a>
                         <ul class="dropdown-menu">
                             <li><a href="house-starter-pageVUE.html">House</a></li>
